# troubleshooting-examples

./: pyproject.toml
src/csv_error/: csv_error.py  example_file.txt
