[tool.poetry]
name = "troubleshooting-examples"
version = "0.1.0"
description = ""
authors = ["Andrew Kalz <andrew.kalz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.1"
pytest-mock = "^3.7.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
